Minor changes in Document Details mapping